--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Yaroju Madhu Kumar Portfolio</title>
+    <title>Yaroju Raj Kumar Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -333,7 +333,7 @@
 									<!-- Details next to profile image -->
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
-										<!-- <p><span class="title-s">Name: </span> <span>Yaroju Madhu Kumar</span></p>
+										<!-- <p><span class="title-s">Name: </span> <span>Yaroju Raj Kumar</span></p>
 										<p><span class="title-s">Qualification: </span> <span>B.Tech</span></p>
 										<p><span class="title-s">Experience: </span> <span>Fresher</span></p>
 										<p><span class="title-s">Address: </span> <span>Hyderbad, India</span></p> -->
