--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 									<!-- <span class="number" >Resume</span>
 									<span>&nbsp; Projects </span> -->
 								</p>
-								<p><a href="Rajkumarresume.pdf" class="btn btn-primary py-3 px-3">View Resume</a></p>
+								<p><a href="Rajkumarresume.mk" class="btn btn-primary py-3 px-3">View Resume</a></p>
 							</div>
 						</div>
 					</div>
